# cpp-starter

./: .clang-tidy  CMakeLists.txt  README.md  Tutorial  compile_flags.txt  tutorial.cpp
includes/: .gitignore  TutorialConfig.h.txt
